--- a/crear_blueprint.ipynb
+++ b/crear_blueprint.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d4a53406",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "8cb13114",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "47175c83",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2109afac",
    "metadata": {},
    "outputs": [
@@ -146,14 +146,15 @@
    ],
    "source": [
     "### Open the files\n",
-    "tablas = 8\n",
-    "n_grupo = 4\n",
+    "fulls = 8\n",
+    "#n_grupo = 4 - ara no estic fent servir grups\n",
     "\n",
-    "d = {}\n",
-    "D = \"Dataset\"\n",
-    "for i in range(0,tablas):\n",
-    "    d[\"group\" + str(i)] = pd.read_excel(\"datasets.ods\", sheet_name=D+str(i+1))\n",
-    "    print('Read:',i, 'size', d[\"group\" + str(i)].shape)"
+    "d = {} #crea un diccionari per emmagatzemar DataFrames(taules de memòria)\n",
+    "D = \"Dataset\" #prefix del nom de les fulles — al excel es diuen Dataset1, Dataset2, ...\n",
+    "for i in range(0,fulls): #recorro 0...7\n",
+    "    d[\"group\" + str(i)] = pd.read_excel(\"datasets.ods\", sheet_name=D+str(i+1)) #el que al diccionari serà gorup 0, sera el meu Dataset1\n",
+    "    # hem assignat al diccionari: d[\"group0\"] = <taula Dataset1> \n",
+    "    print('Read:',i, 'size', d[\"group\" + str(i)].shape) #volem imprimir el nre de files i columnes"
    ]
   },
   {
@@ -165,6 +166,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6c2a1aef",
+   "metadata": {},
+   "source": [
+    "Consideracions a tenir en compte. Primer, treiem les 3 primeres files i columnes de cada full de càlcul perquè a l'excel contenen etiquetes, no dades. En segon lloc, tenim 227 diles i 183 columnes. El que fem és forçar una matriu quadrada nre.filesxnre.files, de manera que, com la matriu inicial eren zeros, copio les columnes existets i deixo la resta plenes de zeros. Això podria donar error. NOTA: Els datasets compten la primera columna com títols."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "9be74200",
@@ -173,27 +182,146 @@
    "source": [
     "## Hipermatrix M with the data (Only the synapses) \n",
     "rows = d[\"group\" + str(i)].shape[0] - 3\n",
-    "columns = d[\"group\" + str(i)].shape[1] - 3\n",
+    "columns = d[\"group\" + str(i)].shape[1] - 3 #les tres primeres files i columnes no contenen dades\n",
     "\n",
-    "M = np.zeros((tablas,rows,columns))\n",
-    "for i in range(0, tablas):\n",
+    "M = np.zeros((fulls,rows,columns))\n",
+    "for i in range(0, fulls):\n",
     "    Data = d['group' + str(i)]\n",
     "    M[i,:,:] = Data.iloc[3:,3:]\n",
     "    \n",
     "## Since we work with same number of nodes, we want them equal and square (zeros when no connections)\n",
-    "M_square = np.zeros((tablas, rows, rows))\n",
-    "M_square[:,:, 0:columns] = M[:,:,:]\n",
+    "M_square = np.zeros((fulls, rows, rows))#creo matriu quadrada\n",
+    "M_square[:,:, 0:columns] = M[:,:,:] #copies les columnes existents (0..179) per deixar zeros en les restants (180..223).\n",
     "\n",
     "## Binarization: No weights\n",
     "#Lo queremos BINARIO, ignorando su peso (Luego pensar cómo se haría con el peso)\n",
-    "M_square_bin = np.zeros((tablas,rows,rows))\n",
-    "for i in range(tablas):\n",
+    "M_square_bin = np.zeros((fulls,rows,rows))\n",
+    "for i in range(fulls):\n",
     "    for j in range(rows):\n",
     "        for k in range(columns):\n",
     "            if (M[i,j,k] >= 1):\n",
     "                M_square_bin[i,j,k] = 1\n",
     "                \n",
     "Nx = rows # Number of nodes (we imposed rows == columns)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d38907c1",
+   "metadata": {},
+   "source": [
+    "### Comprovació de l’estructura de la primera fulla"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce3d311e",
+   "metadata": {},
+   "source": [
+    "Vull assegurar-me de que la neteja dels Datasets (primeres 3 files i columnes) està feta correctament. Nota: Els Datasets prenen la primera fila com un Títol. Per tant, realment n'estic esborrant 4."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6a76e455",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape original group0: (227, 183)\n",
+      "\n",
+      "Column names (first 12):\n",
+      " Index(['Unnamed: 0', 'Unnamed: 1', 'Unnamed: 2', 'Pre', 'Unnamed: 4',\n",
+      "       'Unnamed: 5', 'Unnamed: 6', 'Unnamed: 7', 'Unnamed: 8', 'Unnamed: 9',\n",
+      "       'Unnamed: 10', 'Unnamed: 11'],\n",
+      "      dtype='object')\n",
+      "\n",
+      "Primeres 8 files i 8 columnes (sense transformar):\n",
+      "  Unnamed: 0 Unnamed: 1 Unnamed: 2      Pre Unnamed: 4 Unnamed: 5 Unnamed: 6  \\\n",
+      "0        NaN        NaN        NaN  Sensory        NaN        NaN        NaN   \n",
+      "1        NaN        NaN        NaN     ADFL       ADFR       ADLL       ADLR   \n",
+      "2        NaN        NaN        NaN      NaN        NaN        NaN        NaN   \n",
+      "3       Post    Sensory       ADFL        0          0          0          0   \n",
+      "4        NaN        NaN       ADFR        0          0          0          0   \n",
+      "5        NaN        NaN       ADLL        0          0          0          0   \n",
+      "6        NaN        NaN       ADLR        0          0          0          0   \n",
+      "7        NaN        NaN       AFDL        0          0          0          0   \n",
+      "\n",
+      "  Unnamed: 7  \n",
+      "0        NaN  \n",
+      "1       AFDL  \n",
+      "2        NaN  \n",
+      "3          1  \n",
+      "4          0  \n",
+      "5          0  \n",
+      "6          0  \n",
+      "7          0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# inspecció ràpida del primer full de càlcul (group 0-->Dataset1)\n",
+    "df0 = d['group0']\n",
+    "print(\"Shape original group0:\", df0.shape)\n",
+    "print(\"\\nColumn names (first 12):\\n\", df0.columns[:12])\n",
+    "print(\"\\nPrimeres 8 files i 8 columnes (sense transformar):\")\n",
+    "print(df0.iloc[:8, :8])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff5191d3",
+   "metadata": {},
+   "source": [
+    "## Escollir quin és el dataset A2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "923ef07f",
+   "metadata": {},
+   "source": [
+    "Sabem (per la informació del paper) que A2 té aproximadament 2186 arestes (edges), comprovem si el Dataset8 concorda amb aquestes dades, mirem cada dataset (recordem que group0-->Dataset1, group1-->Dataset2, ...).\n",
+    "\n",
+    "NOTA: A més sospitem que el Dataset8 és el que conté les dades de A2 perquè al repo de la Teresa es pren A2 com a Blueprint fent M_square_bin[-1] que correspon a l'últim element de l'array, és a dir, M_square_bin[7], que correspon a group7--> Dataset8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "676c4042",
+   "metadata": {},
+   "source": [
+    "### Coprovació de que Dataset8 correspon a A2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7d1b9b12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 775.0\n",
+      "1 986.0\n",
+      "2 1012.0\n",
+      "3 1136.0\n",
+      "4 1515.0\n",
+      "5 1525.0\n",
+      "6 2202.0\n",
+      "7 2186.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Veure quants edges té cada dataset\n",
+    "for i in range(8):\n",
+    "    print(i, M_square_bin[i].sum())"
    ]
   }
  ],
