guardar A2, calcular nombre d'errors, contrastar valors repo, generar xarxes amb p i q del paper

--- a/crear_blueprint.ipynb
+++ b/crear_blueprint.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d4a53406",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "8cb13114",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "47175c83",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2109afac",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,7 @@
    "id": "d38907c1",
    "metadata": {},
    "source": [
-    "### Comprovació de l’estructura de la primera fulla"
+    "### Comprovació de l’estructura dels fulls de càlcul"
    ]
   },
   {
@@ -218,12 +218,12 @@
    "id": "ce3d311e",
    "metadata": {},
    "source": [
-    "Vull assegurar-me de que la neteja dels Datasets (primeres 3 files i columnes) està feta correctament. Nota: Els Datasets prenen la primera fila com un Títol. Per tant, realment n'estic esborrant 4."
+    "Vull assegurar-me de que la neteja dels Datasets (primeres 3 files i columnes) està feta correctament. Nota: Els Datasets prenen la primera fila com un Títol  ('Pre', en aquest cas). Per tant, realment n'estic esborrant 4."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "6a76e455",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape original group0: (227, 183)\n",
+      "Shape original group7: (227, 183)\n",
       "\n",
       "Column names (first 12):\n",
       " Index(['Unnamed: 0', 'Unnamed: 1', 'Unnamed: 2', 'Pre', 'Unnamed: 4',\n",
@@ -254,7 +254,7 @@
       "0        NaN  \n",
       "1       AFDL  \n",
       "2        NaN  \n",
-      "3          1  \n",
+      "3          0  \n",
       "4          0  \n",
       "5          0  \n",
       "6          0  \n",
@@ -263,12 +263,12 @@
     }
    ],
    "source": [
-    "# inspecció ràpida del primer full de càlcul (group 0-->Dataset1)\n",
-    "df0 = d['group0']\n",
-    "print(\"Shape original group0:\", df0.shape)\n",
-    "print(\"\\nColumn names (first 12):\\n\", df0.columns[:12])\n",
+    "# inspecció ràpida d'un full de càlcul (group 7-->Dataset8)\n",
+    "df7 = d['group7']\n",
+    "print(\"Shape original group7:\", df7.shape)\n",
+    "print(\"\\nColumn names (first 12):\\n\", df7.columns[:12])\n",
     "print(\"\\nPrimeres 8 files i 8 columnes (sense transformar):\")\n",
-    "print(df0.iloc[:8, :8])"
+    "print(df7.iloc[:8, :8])"
    ]
   },
   {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "7d1b9b12",
    "metadata": {},
    "outputs": [
@@ -322,6 +322,338 @@
     "# Veure quants edges té cada dataset\n",
     "for i in range(8):\n",
     "    print(i, M_square_bin[i].sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b634a9b4",
+   "metadata": {},
+   "source": [
+    "## Guardar A2 com blueprint"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b610a29b",
+   "metadata": {},
+   "source": [
+    "Volem crear i guardar el blueprint A2 (Dataset8 = group7 = M_square_bin[-1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0a5c5fcf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A2 creat\n",
+      "Files i columnes A2 (224, 224)\n",
+      "Arestes 2186\n",
+      "Guardat com A2_blueprint\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Seleccionem A2, és a dir, el dataset8\n",
+    "A2=M_square_bin[-1].copy()\n",
+    "#Fem comprovacions\n",
+    "print(\"A2 creat\")\n",
+    "print(\"Files i columnes A2\", A2.shape)\n",
+    "print(\"Arestes\", int(A2.sum()))\n",
+    "#guardem\n",
+    "np.save(\"A2_blueprint.npy\", A2)\n",
+    "print(\"Guardat com A2_blueprint\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7463e263",
+   "metadata": {},
+   "source": [
+    "# Generar xarxes amb error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b113626",
+   "metadata": {},
+   "source": [
+    "Dues maneres, fixar un nombre d'errors (com es fa al codi de la Teresa) o fer servir p i q (probabilitats de copiar malament un link/no-link). Farem la segona de moment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e014602",
+   "metadata": {},
+   "source": [
+    "## Xarxes amb probabilitat d'error p i q"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc0071aa",
+   "metadata": {},
+   "source": [
+    "Ho farem amb els p (probabilitat de crear un enllaç on no n'hi ha) i q(probabilitat d'esborrar un enllaç) del paper (p=0.007, i q=0.15), per ser fidels al mètode del paper, però, abans, ho farem amb nombre d'errors equivalents per tenir controlats el nombre d'errors introduits, tal i com es fa al repositori del paper."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cbbf724",
+   "metadata": {},
+   "source": [
+    "### ESBORRAR AIXÒ: Veure d'on sortien els errors q feia servir Teresa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "89bab6f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "edges 2186 zeros 47990\n",
+      "q_equiv = 0.1495882891125343\n",
+      "p_equiv = 0.00681391956657637\n"
+     ]
+    }
+   ],
+   "source": [
+    "L = np.load(\"A2_blueprint.npy\")\n",
+    "Nx = L.shape[0]\n",
+    "edges = int(L.sum())\n",
+    "zeros = Nx*Nx - edges\n",
+    "e_error = 327\n",
+    "z_error = 327\n",
+    "q_equiv = e_error / edges\n",
+    "p_equiv = z_error / zeros\n",
+    "print(\"edges\", edges, \"zeros\", zeros)\n",
+    "print(\"q_equiv =\", q_equiv)\n",
+    "print(\"p_equiv =\", p_equiv)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66f6c5b4",
+   "metadata": {},
+   "source": [
+    "Hem vist que p i q son practicament els mateixos del paper"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d80ac67e",
+   "metadata": {},
+   "source": [
+    "### Càlcul de nombre d'errors equivalents per p i q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4b7136c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blueprint A2 carregat correctament.\n",
+      "Mida: (224, 224)\n",
+      "Nombre d'enllaços (1’s): 2186\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Carrega el blueprint A2 desat\n",
+    "L = np.load(\"A2_blueprint.npy\")\n",
+    "\n",
+    "Nx = L.shape[0]\n",
+    "\n",
+    "print(\"Blueprint A2 carregat correctament.\")\n",
+    "print(\"Mida:\", L.shape)\n",
+    "print(\"Nombre d'enllaços (1’s):\", int(L.sum()))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "304c50fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "327 335\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Errors deduits dels valors del paper\n",
+    "edges_A2 = L.sum()\n",
+    "zeros_A2 = Nx*Nx - edges_A2\n",
+    "\n",
+    "q_paper = 0.15\n",
+    "p_paper = 0.007\n",
+    "\n",
+    "errors_esborrar = int(q_paper * edges_A2)\n",
+    "errors_crear = int(p_paper * zeros_A2)\n",
+    "\n",
+    "print(errors_esborrar, errors_crear)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c889cf9",
+   "metadata": {},
+   "source": [
+    "(Esborrar això) ara faré el mateix però amb els p i q que he deduit del codi de la teresa, per veure si em surt el mateix nre, d'errors que ella ha fet servir (327,327) i comprovar validesa de l'anterior"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "0f0ea094",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "327 327\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Errors deduits dels valors del paper\n",
+    "edges_A2 = L.sum()\n",
+    "zeros_A2 = Nx*Nx - edges_A2\n",
+    "\n",
+    "errors_esborrar_teresa = int(q_equiv * edges_A2)\n",
+    "errors_crear_teresa = int(p_equiv * zeros_A2)\n",
+    "\n",
+    "print(errors_esborrar_teresa, errors_crear_teresa)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "822fdf74",
+   "metadata": {},
+   "source": [
+    "# Generar xarxes amb nombre d'errors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f92add2",
+   "metadata": {},
+   "source": [
+    "# Generar xarxes amb p i q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "a8531dfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Xarxes generades amb p i q del paper:\n",
+      "(2, 224, 224)\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_networks = 2\n",
+    "A_test = np.zeros((num_networks, Nx, Nx))\n",
+    "\n",
+    "p = p_paper\n",
+    "q = q_paper\n",
+    "\n",
+    "np.random.seed(1)\n",
+    "\n",
+    "for k in range(num_networks):\n",
+    "    A_copy = L.copy()\n",
+    "    for i in range(Nx):\n",
+    "        for j in range(Nx):\n",
+    "            if L[i,j] == 1:\n",
+    "                # enllaç existent -> pot ser esborrat\n",
+    "                if np.random.rand() < q:\n",
+    "                    A_copy[i,j] = 0\n",
+    "            else:\n",
+    "                # posició buida -> pot crear-se un fals\n",
+    "                if np.random.rand() < p:\n",
+    "                    A_copy[i,j] = 1\n",
+    "    A_test[k,:,:] = A_copy\n",
+    "\n",
+    "print(\"Xarxes generades amb p i q del paper:\")\n",
+    "print(A_test.shape)\n",
+    "np.save(\"synthetic_paper.npy\", A_test)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b840586",
+   "metadata": {},
+   "source": [
+    "Ara volem comprovar el nombre d'enllaços que s'han creat (p·zeros ≈ 0.007·48000 ≈ 330–350 nous) i esborrat (q·edges ≈ 0.15·2186 ≈ 327–330 enllaços)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "3b0c980c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blueprint (A2) edges: 2186\n",
+      "Blueprint zeros: 47990\n",
+      "\n",
+      "Xarxa 0:\n",
+      "  Edges: 2207\n",
+      "  Errors esborrant: 320\n",
+      "  Errors creant: 341\n",
+      "\n",
+      "Xarxa 1:\n",
+      "  Edges: 2174\n",
+      "  Errors esborrant: 333\n",
+      "  Errors creant: 321\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Comprovació del nombre d’enllaços final\n",
+    "original_edges = int(L.sum())\n",
+    "zeros_original = Nx*Nx - original_edges\n",
+    "\n",
+    "print(\"Blueprint (A2) edges:\", original_edges)\n",
+    "print(\"Blueprint zeros:\", zeros_original)\n",
+    "\n",
+    "for k in range(num_networks):\n",
+    "    edges_new = int(A_test[k].sum())\n",
+    "    print(f\"\\nXarxa {k}:\")\n",
+    "    print(\"  Edges:\", edges_new)\n",
+    "\n",
+    "    # errors equivalents\n",
+    "    errors_esborrats = original_edges - np.sum((A_test[k] == 1) & (L == 1))\n",
+    "    errors_creats = np.sum((A_test[k] == 1) & (L == 0))\n",
+    "\n",
+    "    print(\"  Errors esborrant:\", errors_esborrats)\n",
+    "    print(\"  Errors creant:\", errors_creats)\n"
    ]
   }
  ],
