--- a/crear_blueprint.ipynb
+++ b/crear_blueprint.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d4a53406",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "8cb13114",
    "metadata": {},
    "outputs": [
@@ -73,10 +73,14 @@
       "Directori de treball: c:\\Users\\UX433\\OneDrive\\Escritorio\\networkalignment\n",
       "Llistat d'arxius a la carpeta:\n",
       " - .git\n",
+      " - A2_blueprint.npy\n",
+      " - A_test_equiv.npy\n",
       " - C-el_k4_Synthetic- No groups - Simoultenously.ipynb\n",
+      " - codienbrut.ipynb\n",
       " - crear_blueprint.ipynb\n",
       " - datasets.ods\n",
-      " - environment.yml\n"
+      " - environment.yml\n",
+      " - synthetic_paper.npy\n"
      ]
     }
    ],
@@ -91,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "47175c83",
    "metadata": {},
    "outputs": [],
@@ -125,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "2109afac",
    "metadata": {},
    "outputs": [
@@ -175,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "9be74200",
    "metadata": {},
    "outputs": [],
@@ -223,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "6a76e455",
    "metadata": {},
    "outputs": [
@@ -299,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "7d1b9b12",
    "metadata": {},
    "outputs": [
@@ -342,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "0a5c5fcf",
    "metadata": {},
    "outputs": [
@@ -382,23 +386,7 @@
    "id": "1b113626",
    "metadata": {},
    "source": [
-    "Dues maneres, fixar un nombre d'errors (com es fa al codi de la Teresa) o fer servir p i q (probabilitats de copiar malament un link/no-link). Farem la segona de moment."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4e014602",
-   "metadata": {},
-   "source": [
-    "## Xarxes amb probabilitat d'error p i q"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bc0071aa",
-   "metadata": {},
-   "source": [
-    "Ho farem amb els p (probabilitat de crear un enllaç on no n'hi ha) i q(probabilitat d'esborrar un enllaç) del paper (p=0.007, i q=0.15), per ser fidels al mètode del paper, però, abans, ho farem amb nombre d'errors equivalents per tenir controlats el nombre d'errors introduits, tal i com es fa al repositori del paper."
+    "Dues maneres, fixar un nombre d'errors (com es fa al codi de la Teresa) o fer servir p i q (probabilitats de copiar malament un link/no-link). Farem totes dues"
    ]
   },
   {
@@ -411,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "89bab6f6",
    "metadata": {},
    "outputs": [
@@ -444,7 +432,7 @@
    "id": "66f6c5b4",
    "metadata": {},
    "source": [
-    "Hem vist que p i q son practicament els mateixos del paper"
+    "Hem vist que p i q del repositori son practicament els mateixos del paper"
    ]
   },
   {
@@ -457,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "4b7136c4",
    "metadata": {},
    "outputs": [
@@ -484,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "304c50fc",
    "metadata": {},
    "outputs": [
@@ -512,6 +500,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bcc99760",
+   "metadata": {},
+   "source": [
+    "No són exactament els mateixos, suposo que això es deu a què al repo es fan servir p i q que no quadren exactament amb els del paper. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9c889cf9",
    "metadata": {},
    "source": [
@@ -520,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "0f0ea094",
    "metadata": {},
    "outputs": [
@@ -545,10 +541,104 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3ee4fec7",
+   "metadata": {},
+   "source": [
+    "Sí, el nombre d'errors quadra"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "822fdf74",
    "metadata": {},
    "source": [
     "# Generar xarxes amb nombre d'errors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eaf29cec",
+   "metadata": {},
+   "source": [
+    "Ara estem generant xarxes com es feia al repositori, amb el mateix nombre d'errors exacte"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "0fddc963",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blueprint A2 carregat: shape (224, 224) edges: 2186\n",
+      "Edges A2: 2186 Zeros A2: 47990\n",
+      "Xarxa 0: Edges = 2186, Errors esborrant = 327, Errors creant = 327\n",
+      "Xarxa 1: Edges = 2186, Errors esborrant = 327, Errors creant = 327\n",
+      "Xarxa 2: Edges = 2186, Errors esborrant = 327, Errors creant = 327\n",
+      "Xarxa 3: Edges = 2186, Errors esborrant = 327, Errors creant = 327\n",
+      "\n",
+      "Guardades les xarxes amb errors exactes a: synthetic_repo_errors.npy\n"
+     ]
+    }
+   ],
+   "source": [
+    "# === Generar xarxes amb errors exactes (estil del repo) ===\n",
+    "\n",
+    "K = 4               # nombre de xarxes a generar\n",
+    "e_error = 327       # errors esborrant enllaços\n",
+    "z_error = 327       # errors creant enllaços\n",
+    "\n",
+    "# Carregar blueprint si cal\n",
+    "if 'L' not in globals():\n",
+    "    print(\"No hi ha L a la memòria, carregant A2_blueprint.npy ...\")\n",
+    "    L = np.load(\"A2_blueprint.npy\")\n",
+    "\n",
+    "Nx = L.shape[0]\n",
+    "print(\"Blueprint A2 carregat: shape\", L.shape, \"edges:\", int(L.sum()))\n",
+    "\n",
+    "# Preparar output\n",
+    "A_repo = np.zeros((K, Nx, Nx), dtype=int)\n",
+    "rng = np.random.default_rng(42)  # llavor fixa\n",
+    "\n",
+    "edges_total = int(L.sum())\n",
+    "zeros_total = Nx * Nx - edges_total\n",
+    "\n",
+    "print(\"Edges A2:\", edges_total, \"Zeros A2:\", zeros_total)\n",
+    "\n",
+    "# Comprovacions\n",
+    "if e_error > edges_total:\n",
+    "    raise ValueError(f\"e_error ({e_error}) > nombre d'enllaços ({edges_total})\")\n",
+    "if z_error > zeros_total:\n",
+    "    raise ValueError(f\"z_error ({z_error}) > nombre de zeros ({zeros_total})\")\n",
+    "\n",
+    "for m in range(K):\n",
+    "    A = L.copy().astype(int)\n",
+    "    A_flat = A.reshape(Nx*Nx)\n",
+    "\n",
+    "    ones_idx = np.where(A_flat == 1)[0]\n",
+    "    zeros_idx = np.where(A_flat == 0)[0]\n",
+    "\n",
+    "    flip_ones = rng.choice(ones_idx, size=e_error, replace=False)\n",
+    "    flip_zeros = rng.choice(zeros_idx, size=z_error, replace=False)\n",
+    "\n",
+    "    A_flat[flip_ones] = 0\n",
+    "    A_flat[flip_zeros] = 1\n",
+    "\n",
+    "    A = A_flat.reshape(Nx, Nx)\n",
+    "    A_repo[m] = A\n",
+    "\n",
+    "    errors_removed = edges_total - np.sum((A == 1) & (L == 1))\n",
+    "    errors_added = np.sum((A == 1) & (L == 0))\n",
+    "\n",
+    "    print(f\"Xarxa {m}: Edges = {int(A.sum())}, Errors esborrant = {errors_removed}, Errors creant = {errors_added}\")\n",
+    "\n",
+    "# Guardar a disc\n",
+    "out_name = \"synthetic_repo_errors.npy\"\n",
+    "np.save(out_name, A_repo)\n",
+    "print(\"\\nGuardades les xarxes amb errors exactes a:\", out_name)\n"
    ]
   },
   {
@@ -561,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "a8531dfb",
    "metadata": {},
    "outputs": [
@@ -570,12 +660,12 @@
      "output_type": "stream",
      "text": [
       "Xarxes generades amb p i q del paper:\n",
-      "(2, 224, 224)\n"
+      "(6, 224, 224)\n"
      ]
     }
    ],
    "source": [
-    "num_networks = 2\n",
+    "num_networks = 6\n",
     "A_test = np.zeros((num_networks, Nx, Nx))\n",
     "\n",
     "p = p_paper\n",
@@ -612,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "3b0c980c",
    "metadata": {},
    "outputs": [
@@ -631,7 +721,27 @@
       "Xarxa 1:\n",
       "  Edges: 2174\n",
       "  Errors esborrant: 333\n",
-      "  Errors creant: 321\n"
+      "  Errors creant: 321\n",
+      "\n",
+      "Xarxa 2:\n",
+      "  Edges: 2175\n",
+      "  Errors esborrant: 333\n",
+      "  Errors creant: 322\n",
+      "\n",
+      "Xarxa 3:\n",
+      "  Edges: 2190\n",
+      "  Errors esborrant: 329\n",
+      "  Errors creant: 333\n",
+      "\n",
+      "Xarxa 4:\n",
+      "  Edges: 2179\n",
+      "  Errors esborrant: 304\n",
+      "  Errors creant: 297\n",
+      "\n",
+      "Xarxa 5:\n",
+      "  Edges: 2169\n",
+      "  Errors esborrant: 334\n",
+      "  Errors creant: 317\n"
      ]
     }
    ],
