creo que ya está toddo lo importante

--- a/codienbrut.ipynb
+++ b/codienbrut.ipynb
@@ -881,6 +881,127 @@
     "plt.legend()\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7097e136",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -------------------------------------------------------------\n",
+    "# CÀLCUL D’ENERGIES PER A LES XARXES AMB NOMBRE EXACTE D’ERRORS\n",
+    "# synthetic_repo_errors.npy\n",
+    "# -------------------------------------------------------------\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "print(\"Carregant xarxes synthetic_repo_errors.npy ...\")\n",
+    "errors_nets = np.load(\"synthetic_repo_errors.npy\")   # shape = (2, Nx, Nx)\n",
+    "print(\"Shape:\", errors_nets.shape)\n",
+    "\n",
+    "# Per claredat\n",
+    "base0 = errors_nets[0]\n",
+    "base1 = errors_nets[1]\n",
+    "\n",
+    "# -------------------------------------------------------------\n",
+    "# 1) GENEREM 10 MOSTRES PER CADA XARXA BASE\n",
+    "# -------------------------------------------------------------\n",
+    "\n",
+    "def generate_samples_from_base(base_net, n_samples=10):\n",
+    "    \"\"\"\n",
+    "    Genera n_samples mostres d’una xarxa base aplicant una permutació aleatòria.\n",
+    "    (Si volguessis aplicar soroll extra, es posaria aquí.)\n",
+    "    \"\"\"\n",
+    "    samples = []\n",
+    "    Nx = base_net.shape[0]\n",
+    "\n",
+    "    for k in range(n_samples):\n",
+    "        perm = np.random.permutation(Nx)       # permutació aleatòria\n",
+    "        inv = np.argsort(perm)                 # inversa per aplicar-la correctament\n",
+    "\n",
+    "        # Generem la mostra permutada\n",
+    "        new_net = base_net[perm][:, perm]\n",
+    "\n",
+    "        samples.append(new_net)\n",
+    "\n",
+    "    return np.array(samples)\n",
+    "\n",
+    "\n",
+    "print(\"\\nGenerant mostres ...\")\n",
+    "samples0 = generate_samples_from_base(base0, 10)\n",
+    "samples1 = generate_samples_from_base(base1, 10)\n",
+    "\n",
+    "print(\"samples0 shape:\", samples0.shape)\n",
+    "print(\"samples1 shape:\", samples1.shape)\n",
+    "\n",
+    "\n",
+    "# -------------------------------------------------------------\n",
+    "# 2) DEFINIM L_latent = el blueprint (o el que vulguis usar com a L)\n",
+    "# -------------------------------------------------------------\n",
+    "\n",
+    "print(\"\\nCarregant blueprint A2 ...\")\n",
+    "L_latent = np.load(\"A2_blueprint.npy\")\n",
+    "print(\"L_latent shape:\", L_latent.shape)\n",
+    "\n",
+    "\n",
+    "# -------------------------------------------------------------\n",
+    "# 3) CALCULAR ENERGIES (H) PER TOTES LES MOSTRES\n",
+    "# -------------------------------------------------------------\n",
+    "# Les funcions overlap_total_prob_per_network i energy_function\n",
+    "# JA LES TENS DEFINIDES A UNA CEL·LA ANTERIOR.\n",
+    "def compute_Hs(samples, L_ref, P_inv_single, alpha=5, beta=2):\n",
+    "    \"\"\"\n",
+    "    samples: shape (n_samples, Nx, Nx)\n",
+    "    L_ref: blueprint usada per calcular energia\n",
+    "    P_inv_single: vector 1D de mida Nx (el mapping de la xarxa mare)\n",
+    "    \"\"\"\n",
+    "    Nx = L_ref.shape[0]\n",
+    "    n_samples = samples.shape[0]\n",
+    "\n",
+    "    # Convertim P_inv_single (Nx,) → (1, Nx) per tal que overlap_total_prob funcioni\n",
+    "    P_inv_local = P_inv_single.reshape(1, Nx)\n",
+    "\n",
+    "    Edges_Lref = int(np.sum(L_ref))\n",
+    "    Edges_NoLref = Nx*Nx - Edges_Lref\n",
+    "\n",
+    "    Hs = []\n",
+    "\n",
+    "    for k in range(n_samples):\n",
+    "        print(f\"\\n--- mostra {k} ---\")\n",
+    "\n",
+    "        # Convertir la mostra en xarxa shape (1, Nx, Nx)\n",
+    "        net = samples[k].reshape(1, Nx, Nx)\n",
+    "\n",
+    "        # 1) Overlaps correctament\n",
+    "        ov0, ov1 = overlap_total_prob(L_ref, net, P_inv_local)\n",
+    "\n",
+    "        # 2) Energia del PAPER\n",
+    "        H = hamiltonian_prob(\n",
+    "            Edges_NoLref, Edges_Lref,\n",
+    "            int(ov0), int(ov1),\n",
+    "            alpha, beta\n",
+    "        )\n",
+    "\n",
+    "        Hs.append(H)\n",
+    "\n",
+    "    return np.array(Hs)\n",
+    "\n",
+    "\n",
+    "print(\"\\nCalculant energies ...\")\n",
+    "Hs0 = compute_Hs(samples0, L_latent, P_inv_f[0])\n",
+    "Hs1 = compute_Hs(samples1, L_latent, P_inv_f[1])\n",
+    "\n",
+    "\n",
+    "print(\"\\nRESULTATS:\")\n",
+    "print(\"Hs0 (10 valors):\", Hs0)\n",
+    "print(\"Hs1 (10 valors):\", Hs1)\n",
+    "\n",
+    "np.save(\"Hs_base0.npy\", Hs0)\n",
+    "np.save(\"Hs_base1.npy\", Hs1)\n",
+    "\n",
+    "print(\"\\nGuardats fitxers: Hs_base0.npy i Hs_base1.npy\")\n"
+   ]
   }
  ],
  "metadata": {
