he tret les coses que estaven malament

--- a/codienbrut.ipynb
+++ b/codienbrut.ipynb
@@ -1002,6 +1002,423 @@
     "\n",
     "print(\"\\nGuardats fitxers: Hs_base0.npy i Hs_base1.npy\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2db25305",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import numpy as np\n",
+    "import math\n",
+    "import os\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n",
+    "# Paràmetres i noms fitxers\n",
+    "\n",
+    "blueprint_file = \"A2_blueprint.npy\"\n",
+    "pq_file = \"synthetic_paper.npy\"    # xarxes generades amb p_paper,q_paper\n",
+    "out_H_file = \"Hs_synthetic_paper.npy\"\n",
+    "alpha, beta = 5, 2\n",
+    "\n",
+    "# Comprovacions fitxers\n",
+    "\n",
+    "if not os.path.exists(blueprint_file):\n",
+    "    raise FileNotFoundError(f\"No trobat {blueprint_file}. Guarda'l a la carpeta del notebook abans d'executar.\")\n",
+    "if not os.path.exists(pq_file):\n",
+    "    raise FileNotFoundError(f\"No trobat {pq_file}. Genera'l primer amb p_paper/q_paper.\")\n",
+    "\n",
+    "# Carregar dades\n",
+    "L = np.load(blueprint_file).astype(int)     # blueprint A2\n",
+    "A_pq = np.load(pq_file).astype(int)         # xarxes generades amb p/q\n",
+    "Nx = L.shape[0]\n",
+    "K = A_pq.shape[0]\n",
+    "\n",
+    "print(\"Carregat blueprint:\", blueprint_file, \"shape:\", L.shape, \"edges:\", int(L.sum()))\n",
+    "print(\"Carregades xarxes p/q:\", pq_file, \"shape:\", A_pq.shape)\n",
+    "\n",
+    "#Funcions tteresa (sense @jit)\n",
+    "# \n",
+    "def hamiltonian_prob(Edges_NoL, Edges_L, overlap_0, overlap_1, alpha, beta):\n",
+    "    \"\"\"Fórmula del repo: retorna H (scalar)\"\"\"\n",
+    "    # prints de control (no massa per no saturar)\n",
+    "    #print(\"hamiltonian_prob inputs -> Edges_NoL:\",Edges_NoL,\"Edges_L:\",Edges_L,\"ov0:\",overlap_0,\"ov1:\",overlap_1)\n",
+    "    A_1 = overlap_1 + alpha\n",
+    "    B_1 = (Edges_L - overlap_1 + beta)\n",
+    "    C_1 = Edges_L + alpha + beta\n",
+    "\n",
+    "    A_0 = overlap_0 + alpha\n",
+    "    B_0 = (Edges_NoL - overlap_0 + beta)\n",
+    "    C_0 = Edges_NoL + alpha + beta\n",
+    "\n",
+    "    H1 = math.lgamma(A_1) + math.lgamma(B_1) - math.lgamma(C_1)\n",
+    "    H0 = math.lgamma(A_0) + math.lgamma(B_0) - math.lgamma(C_0)\n",
+    "\n",
+    "    H = -(H1 + H0)\n",
+    "    return H\n",
+    "\n",
+    "def overlap_total_prob_per_network(L_f, A_f, P_inv_f):\n",
+    "    \"\"\"\n",
+    "    Versió que retorna ovlp_0[k], ovlp_1[k] per cada xarxa k.\n",
+    "    Respecta el mapping P_inv_f (forma (K, Nx)).\n",
+    "    \"\"\"\n",
+    "    K_local = A_f.shape[0]\n",
+    "    ovlp_0 = np.zeros(K_local, dtype=int)\n",
+    "    ovlp_1 = np.zeros(K_local, dtype=int)\n",
+    "    Nx_local = L_f.shape[0]\n",
+    "    # recorrem per xarxa\n",
+    "    for k in range(K_local):\n",
+    "        s0 = 0\n",
+    "        s1 = 0\n",
+    "        for f in range(Nx_local):\n",
+    "            p_f = int(P_inv_f[k, f])\n",
+    "            for c in range(Nx_local):\n",
+    "                p_c = int(P_inv_f[k, c])\n",
+    "                valor_L = int(L_f[f,c])\n",
+    "                valor_A = int(A_f[k, p_f, p_c])\n",
+    "                s0 += (1 - valor_L) * (1 - valor_A)\n",
+    "                s1 += valor_L * valor_A\n",
+    "        ovlp_0[k] = s0\n",
+    "        ovlp_1[k] = s1\n",
+    "    return ovlp_0, ovlp_1\n",
+    "\n",
+    "def L_wiring(A_f, P_inv_f):\n",
+    "    \"\"\"\n",
+    "    Reconstrueix blueprint per majoria (round of mean) tenint en compte P_inv_f.\n",
+    "    Retorna L_new (Nx x Nx)\n",
+    "    \"\"\"\n",
+    "    K_local = A_f.shape[0]\n",
+    "    Nx_local = A_f.shape[1]\n",
+    "    L_new = np.zeros((Nx_local, Nx_local), dtype=int)\n",
+    "    for i in range(Nx_local):\n",
+    "        for j in range(Nx_local):\n",
+    "            s = 0\n",
+    "            for k in range(K_local):\n",
+    "                p1 = int(P_inv_f[k, i])\n",
+    "                p2 = int(P_inv_f[k, j])\n",
+    "                s += int(A_f[k, p1, p2])\n",
+    "            # mitjana i round\n",
+    "            val = round(s / K_local)\n",
+    "            L_new[i,j] = int(val)\n",
+    "    return L_new\n",
+    "\n",
+    "# quicksort/partition del repo (usats per permu_groups)\n",
+    "def partition(array, etiquetas, begin, end):\n",
+    "    pivot = begin\n",
+    "    for i in range(begin+1, end+1):\n",
+    "        if array[i] < array[begin]:\n",
+    "            pivot += 1\n",
+    "            array[i], array[pivot] = array[pivot], array[i]\n",
+    "            etiquetas[i], etiquetas[pivot] = etiquetas[pivot], etiquetas[i]\n",
+    "    array[pivot], array[begin] = array[begin], array[pivot]\n",
+    "    etiquetas[pivot], etiquetas[begin] = etiquetas[begin], etiquetas[pivot]\n",
+    "    return pivot\n",
+    "\n",
+    "def quicksort(array, etiquetas, begin=0, end=None):\n",
+    "    if end is None:\n",
+    "        end = len(array) - 1\n",
+    "    if begin >= end:\n",
+    "        return\n",
+    "    pivot = partition(array, etiquetas, begin, end)\n",
+    "    quicksort(array, etiquetas, begin, pivot-1)\n",
+    "    quicksort(array, etiquetas, pivot+1, end)\n",
+    "\n",
+    "def permu_groups(L_f, A_f, start_f):\n",
+    "    \"\"\"\n",
+    "    Implementació com al repo però en Python sense numba.\n",
+    "    Retorna P_todo de forma (2, K, Nx) on:\n",
+    "      P_todo[0] = P_f (map L -> A)\n",
+    "      P_todo[1] = P_inv_f (map A -> L)\n",
+    "    start_f: array amb posicions d'inici de grup (p.ex. [0, Nx])\n",
+    "    \"\"\"\n",
+    "    Nx_local = L_f.shape[0]\n",
+    "    K_local = A_f.shape[0]\n",
+    "    N_groups = len(start_f)\n",
+    "\n",
+    "    # Mappings a omplir\n",
+    "    P_f = np.zeros((K_local, Nx_local), dtype=int)\n",
+    "    P_inv_f = np.zeros((K_local, Nx_local), dtype=int)\n",
+    "\n",
+    "    # Ordenació inicial de L per grau\n",
+    "    orden_L = np.zeros(Nx_local, dtype=int)\n",
+    "    for i in range(Nx_local):\n",
+    "        b = np.nonzero(L_f[i,:])[0]\n",
+    "        orden_L[i] = b.size\n",
+    "    array_L = np.arange(Nx_local)\n",
+    "    # ordenem in-place els arrays utilitzant quicksort (com en el repo)\n",
+    "    # quicksort espera arrays mutables\n",
+    "    orden_L_copy = orden_L.astype(float).copy()  # elements numericables\n",
+    "    array_L_copy = array_L.copy()\n",
+    "    quicksort(orden_L_copy, array_L_copy)\n",
+    "    array_L_sorted = array_L_copy  # indices ordenats per grau\n",
+    "\n",
+    "    # ara classificar per grups seguint start_f\n",
+    "    array_L_labels = np.zeros(Nx_local, dtype=int)\n",
+    "    group_number = np.zeros(N_groups, dtype=int)\n",
+    "    for idx in range(Nx_local):\n",
+    "        node = array_L_sorted[idx]\n",
+    "        # trobar grup: el grup t tal que start_f[t] <= node < (start_f[t+1] or Nx)\n",
+    "        t = 0\n",
+    "        while (t + 1 < N_groups) and (node >= start_f[t+1]):\n",
+    "            t += 1\n",
+    "        g = int(start_f[t])\n",
+    "        array_L_labels[g + int(group_number[t])] = node\n",
+    "        group_number[t] += 1\n",
+    "\n",
+    "    # Observations: per cada A[k] fem el mateix procés\n",
+    "    for k in range(K_local):\n",
+    "        orden_A = np.zeros(Nx_local, dtype=int)\n",
+    "        for i in range(Nx_local):\n",
+    "            b = np.nonzero(A_f[k, i, :])[0]\n",
+    "            orden_A[i] = b.size\n",
+    "        array_A = np.arange(Nx_local)\n",
+    "        orden_A_copy = orden_A.astype(float).copy()\n",
+    "        array_A_copy = array_A.copy()\n",
+    "        quicksort(orden_A_copy, array_A_copy)\n",
+    "        array_A_sorted = array_A_copy\n",
+    "\n",
+    "        # ara organitzar per grup en array_A_labels\n",
+    "        array_A_labels = np.zeros(Nx_local, dtype=int)\n",
+    "        group_number = np.zeros(N_groups, dtype=int)\n",
+    "        for idx in range(Nx_local):\n",
+    "            nodeA = array_A_sorted[idx]\n",
+    "            # trobar grup de nodeA\n",
+    "            # es fa comparant el índex ordenat (com en el repo)\n",
+    "            t = 0\n",
+    "            while (t + 1 < N_groups) and (nodeA >= start_f[t+1]):\n",
+    "                t += 1\n",
+    "            g = int(start_f[t])\n",
+    "            array_A_labels[g + int(group_number[t])] = nodeA\n",
+    "            group_number[t] += 1\n",
+    "\n",
+    "        # ara posar array_A_labels ordenat en correspondència amb array_L_labels\n",
+    "        # a repo: array_A_labels = array_A_labels[np.argsort(array_L_labels)]\n",
+    "        order_idx = np.argsort(array_L_labels)\n",
+    "        mapped = array_A_labels[order_idx]\n",
+    "        P_f[k, :] = mapped\n",
+    "\n",
+    "        # construir P_inv_f (inversa)\n",
+    "        for i_inv in range(Nx_local):\n",
+    "            for j_inv in range(Nx_local):\n",
+    "                if P_f[k, i_inv] == j_inv:\n",
+    "                    P_inv_f[k, j_inv] = i_inv\n",
+    "\n",
+    "    P_todo = np.zeros((2, K_local, Nx_local), dtype=int)\n",
+    "    P_todo[0,:,:] = P_f.copy()\n",
+    "    P_todo[1,:,:] = P_inv_f.copy()\n",
+    "    return P_todo\n",
+    "\n",
+    "\n",
+    "# start_groups (del repo), probablement no caldria però torno a posar\n",
+    "\n",
+    "n_groups = 1\n",
+    "start_groups = np.zeros(1, dtype=int)\n",
+    "end_groups = np.zeros(1, dtype=int) + Nx\n",
+    "size_groups = np.zeros(1, dtype=int) + Nx\n",
+    "print(\"start_groups:\", start_groups, \"end_groups:\", end_groups)\n",
+    "\n",
+    "# Calcular mappings (P_f i P_inv)\n",
+    "\n",
+    "print(\"\\nCalculant permutacions (permu_groups) ...\")\n",
+    "P_todo = permu_groups(L, A_pq, start_groups)\n",
+    "P_f = P_todo[0,:,:]\n",
+    "P_inv_f = P_todo[1,:,:]\n",
+    "print(\"P_inv_f shape:\", P_inv_f.shape)\n",
+    "\n",
+    "# 5) Calcular overlaps per xarxa i H per xarxa\n",
+    "print(\"\\nCalculant overlaps per xarxa ... (aixo pot trigar una mica segons Nx i K)\")\n",
+    "ovlp_0_vec, ovlp_1_vec = overlap_total_prob_per_network(L, A_pq, P_inv_f)\n",
+    "Edges_L = int(L.sum())\n",
+    "Edges_NoL = Nx*Nx - Edges_L\n",
+    "\n",
+    "Hs = np.zeros(K)\n",
+    "for k in range(K):\n",
+    "    Hs[k] = hamiltonian_prob(Edges_NoL, Edges_L, int(ovlp_0_vec[k]), int(ovlp_1_vec[k]), alpha, beta)\n",
+    "\n",
+    "print(\"\\nHs per xarxa (synthetic_paper):\")\n",
+    "for k in range(K):\n",
+    "    print(f\"  xarxa {k}: H = {Hs[k]:.6f}, edges = {int(A_pq[k].sum())}, ovlp1 = {ovlp_1_vec[k]}, ovlp0 = {ovlp_0_vec[k]}\")\n",
+    "\n",
+    "# guardar\n",
+    "np.save(out_H_file, Hs)\n",
+    "print(\"\\nHs guardats a\", out_H_file)\n",
+    "\n",
+    "# Construir L_latent via L_wiring (utilitzant el mapping P_inv_f)\n",
+    "\n",
+    "print(\"\\nConstruint L_latent via L_wiring (majority wiring) ...\")\n",
+    "L_latent = L_wiring(A_pq, P_inv_f)\n",
+    "print(\"L_latent shape, edges:\", L_latent.shape, int(L_latent.sum()))\n",
+    "np.save(\"L_latent_from_pq.npy\", L_latent)\n",
+    "print(\"L_latent guardat a L_latent_from_pq.npy\")\n",
+    "\n",
+    "\n",
+    "# Generar 10 mostres per dues xarxes base i calcular H per mostra\n",
+    "# \n",
+    "def sample_from_base(A_base, p, q, n_samples=10, seed=123):\n",
+    "    rng = np.random.default_rng(seed)\n",
+    "    samples = np.zeros((n_samples, Nx, Nx), dtype=int)\n",
+    "    for s in range(n_samples):\n",
+    "        X = A_base.copy()\n",
+    "        r = rng.random((Nx, Nx))\n",
+    "        X[(A_base == 1) & (r < q)] = 0\n",
+    "        X[(A_base == 0) & (r < p)] = 1\n",
+    "        samples[s] = X\n",
+    "    return samples\n",
+    "\n",
+    "# triem dues bases: les primeres dues de A_pq\n",
+    "if K >= 2:\n",
+    "    base0 = A_pq[0]\n",
+    "    base1 = A_pq[1]\n",
+    "else:\n",
+    "    base0 = A_pq[0]\n",
+    "    base1 = A_pq[0]\n",
+    "\n",
+    "p_used = 0.007\n",
+    "q_used = 0.15\n",
+    "\n",
+    "samples0 = sample_from_base(base0, p_used, q_used, n_samples=10, seed=1)\n",
+    "samples1 = sample_from_base(base1, p_used, q_used, n_samples=10, seed=2)\n",
+    "\n",
+    "\n",
+    "# Funció per calcular H de samples amb mappings repetits\n",
+    "def compute_Hs_for_samples(samples, L_ref, P_inv_for_samples, alpha=alpha, beta=beta):\n",
+    "    n_samples = samples.shape[0]\n",
+    "    Nx_local = L_ref.shape[0]\n",
+    "\n",
+    "    # Normalitzar formats: volem un P_inv_samples amb shape (n_samples, Nx)\n",
+    "    P_inv_samples = None\n",
+    "\n",
+    "    if P_inv_for_samples.ndim == 2 and P_inv_for_samples.shape[0] == n_samples:\n",
+    "        P_inv_samples = P_inv_for_samples.copy()\n",
+    "    elif P_inv_for_samples.ndim == 1 and P_inv_for_samples.shape[0] == Nx_local:\n",
+    "        P_inv_samples = np.tile(P_inv_for_samples.reshape(1, Nx_local), (n_samples, 1))\n",
+    "    else:\n",
+    "        raise ValueError(\"Format P_inv_for_samples no reconegut. Esperat (n_samples,Nx) o (Nx,)\")\n",
+    "\n",
+    "    ov0 = np.zeros(n_samples, dtype=int)\n",
+    "    ov1 = np.zeros(n_samples, dtype=int)\n",
+    "\n",
+    "    for s in range(n_samples):\n",
+    "        s0 = 0\n",
+    "        s1 = 0\n",
+    "        P_inv_s = P_inv_samples[s]\n",
+    "        for f in range(Nx_local):\n",
+    "            p_f = int(P_inv_s[f])\n",
+    "            for c in range(Nx_local):\n",
+    "                p_c = int(P_inv_s[c])\n",
+    "                valL = int(L_ref[f, c])\n",
+    "                valA = int(samples[s, p_f, p_c])\n",
+    "                s0 += (1 - valL) * (1 - valA)\n",
+    "                s1 += valL * valA\n",
+    "        ov0[s] = s0\n",
+    "        ov1[s] = s1\n",
+    "\n",
+    "    Edges_Lref = int(np.sum(L_ref))\n",
+    "    Edges_NoLref = Nx_local * Nx_local - Edges_Lref\n",
+    "\n",
+    "    Hs_local = np.zeros(n_samples)\n",
+    "    for i in range(n_samples):\n",
+    "        Hs_local[i] = hamiltonian_prob(Edges_NoLref, Edges_Lref, int(ov0[i]), int(ov1[i]), alpha, beta)\n",
+    "    return Hs_local\n",
+    "\n",
+    "\n",
+    "#cridem funció \n",
+    "\n",
+    "P_inv_base0 = P_inv_f[0]\n",
+    "P_inv_base1 = P_inv_f[1]\n",
+    "Hs0 = compute_Hs_for_samples(samples0, L_latent, P_inv_base0)\n",
+    "Hs1 = compute_Hs_for_samples(samples1, L_latent, P_inv_base1)\n",
+    "print(\"Hs0:\", Hs0)\n",
+    "print(\"Hs1:\", Hs1)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Plot \n",
+    "\n",
+    "Hs_all = np.concatenate([Hs0, Hs1])\n",
+    "# H de la blueprint A2 respecte L_latent:\n",
+    "ov0_blue, ov1_blue = overlap_total_prob_per_network(L_latent, L.reshape(1,Nx,Nx), P_inv_f)\n",
+    "Edges_Lref = int(np.sum(L_latent))\n",
+    "Edges_NoLref = Nx*Nx - Edges_Lref\n",
+    "H_blue_vs_Llatent = hamiltonian_prob(Edges_NoLref, Edges_Lref, int(ov0_blue[0]), int(ov1_blue[0]), alpha, beta)\n",
+    "print(\"\\nH(A2 vs L_latent) =\", H_blue_vs_Llatent)\n",
+    "\n",
+    "plt.figure(figsize=(7,4))\n",
+    "plt.hist(Hs_all, bins=10)\n",
+    "plt.axvline(H_blue_vs_Llatent, color='k', linestyle='--', label='H(A2 vs L_latent)')\n",
+    "plt.legend()\n",
+    "plt.title(\"Distribució d'energies (20 mostres) i H(A2)\")\n",
+    "plt.xlabel(\"H\")\n",
+    "plt.ylabel(\"Freq\")\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "# 9) Guardar resum\n",
+    "summary = {\n",
+    "    'Hs_per_network': Hs.tolist(),\n",
+    "    'Hs_samples0': Hs0.tolist(),\n",
+    "    'Hs_samples1': Hs1.tolist(),\n",
+    "    'H_A2_vs_Llatent': float(H_blue_vs_Llatent),\n",
+    "    'L_latent_edges': int(np.sum(L_latent))\n",
+    "}\n",
+    "np.save(\"energy_pipeline_summary.npy\", summary)\n",
+    "print(\"\\nResum guardat a energy_pipeline_summary.npy\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4de3425f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "print(\"Carregant xarxes synthetic_repo_errors.npy ...\")\n",
+    "errors_nets = np.load(\"synthetic_repo_errors.npy\")   # shape = (2, Nx, Nx)\n",
+    "print(\"Shape:\", errors_nets.shape)\n",
+    "\n",
+    "# Per claredat\n",
+    "base0 = errors_nets[0]\n",
+    "base1 = errors_nets[1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a7a36c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_samples_from_base(base_net, n_samples=10):\n",
+    "    \"\"\"\n",
+    "    Genera n_samples mostres d’una xarxa base aplicant una permutació aleatòria.\n",
+    "    (Si volguessis aplicar soroll extra, es posaria aquí.)\n",
+    "    \"\"\"\n",
+    "    samples = []\n",
+    "    Nx = base_net.shape[0]\n",
+    "\n",
+    "    for k in range(n_samples):\n",
+    "        perm = np.random.permutation(Nx)       # permutació aleatòria\n",
+    "        inv = np.argsort(perm)                 # inversa per aplicar-la correctament\n",
+    "\n",
+    "        # Generem la mostra permutada\n",
+    "        new_net = base_net[perm][:, perm]\n",
+    "\n",
+    "        samples.append(new_net)\n",
+    "\n",
+    "    return np.array(samples)\n",
+    "\n",
+    "\n",
+    "print(\"\\nGenerant mostres ...\")\n",
+    "samples0 = generate_samples_from_base(base0, 10)\n",
+    "samples1 = generate_samples_from_base(base1, 10)\n",
+    "\n",
+    "print(\"samples0 shape:\", samples0.shape)\n",
+    "print(\"samples1 shape:\", samples1.shape)\n"
+   ]
   }
  ],
  "metadata": {
