arreglat com generar xarxes amb p i q i funcio .copy

--- a/crear_blueprint.ipynb
+++ b/crear_blueprint.ipynb
@@ -616,9 +616,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5b840586",
+   "metadata": {},
+   "source": [
+    "Ara volem comprovar el nombre d'enllaços que s'han creat (p·zeros ≈ 0.007·48000 ≈ 330–350 nous) i esborrat (q·edges ≈ 0.15·2186 ≈ 327–330 enllaços)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "790a40bf",
+   "metadata": {},
+   "source": [
+    "El que estic fent aquí no és modificar el blueprint amb errors, no reconstruir des de 0. No estic recreant la matriu probabilisticament partint d'una matriu de 0s. \n",
+    "Aqui la matriu L comença tocada i només altero alguns elements."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "a8531dfb",
+   "execution_count": 24,
+   "id": "f9447b3c",
    "metadata": {},
    "outputs": [
     {
@@ -632,27 +649,29 @@
    ],
    "source": [
     "num_networks = 2\n",
-    "A_test = np.zeros((num_networks, Nx, Nx))\n",
+    "A_test = np.zeros((num_networks, Nx, Nx)) #crea un array 3D ple de zeros\n",
     "\n",
     "p = p_paper\n",
     "q = q_paper\n",
     "\n",
-    "np.random.seed(1)\n",
+    "np.random.seed(1) #fixo la llavor de les xarxes random generades pq sino cada execucio em genera xarxes diferents\n",
     "\n",
     "for k in range(num_networks):\n",
-    "    A_copy = L.copy()\n",
+    "    A_copy = L.copy() #deep copy de L, però no comparteixen memòria. modificar a.copy no modifica L\n",
     "    for i in range(Nx):\n",
     "        for j in range(Nx):\n",
     "            if L[i,j] == 1:\n",
     "                # enllaç existent -> pot ser esborrat\n",
-    "                if np.random.rand() < q:\n",
+    "                if np.random.rand() < q: #genero aleatori entre 0 i 1\n",
     "                    A_copy[i,j] = 0\n",
     "            else:\n",
     "                # posició buida -> pot crear-se un fals\n",
     "                if np.random.rand() < p:\n",
     "                    A_copy[i,j] = 1\n",
-    "    A_test[k,:,:] = A_copy\n",
-    "#posar .copy per asegurar q les a.test son diferents mirar a0 i a1 son diferents\n",
+    "    A_test[k,:,:] = A_copy #guardo cada xarxa k generada.\n",
+    "    # per cada k (ie per cada xarxa), es comença de zero fent una còpia nova i completa de L.\n",
+    "\n",
+    "\n",
     "print(\"Xarxes generades amb p i q del paper:\")\n",
     "print(A_test.shape)\n",
     "np.save(\"synthetic_paper.npy\", A_test)\n"
@@ -660,15 +679,60 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b840586",
+   "id": "7ddb6fa2",
    "metadata": {},
    "source": [
-    "Ara volem comprovar el nombre d'enllaços que s'han creat (p·zeros ≈ 0.007·48000 ≈ 330–350 nous) i esborrat (q·edges ≈ 0.15·2186 ≈ 327–330 enllaços)"
+    "Si ho vull fer tal com em va dir la marta, emplenant una matriu feta de 0s seria aixi."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
+   "id": "49a162bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Xarxes generades amb p i q del paper partint d'una de 0s (recrear probabilisticament):\n",
+      "(2, 224, 224)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "A_test_0 = np.zeros((num_networks, Nx, Nx))\n",
+    "np.random.seed(1)\n",
+    "\n",
+    "for k in range(num_networks):\n",
+    "    A_copy_0 = np.zeros_like(L)   # matriu tota de 0\n",
+    "\n",
+    "    for i in range(Nx):\n",
+    "        for j in range(Nx):\n",
+    "\n",
+    "            if L[i, j] == 1:\n",
+    "                # Enllaç existent\n",
+    "                if np.random.rand() < q:\n",
+    "                    A_copy_0[i, j] = 0        # No copio (error d'esborrat)\n",
+    "                else:\n",
+    "                    A_copy_0[i, j] = 1        # Copio\n",
+    "            else:\n",
+    "                # No enllaç\n",
+    "                if np.random.rand() < p:\n",
+    "                    A_copy_0[i, j] = 1        # Fals positiu\n",
+    "                else:\n",
+    "                    A_copy_0[i, j] = 0        # Copio (0)\n",
+    "\n",
+    "    A_test_0[k] = A_copy_0\n",
+    "print(\"Xarxes generades amb p i q del paper partint d'una de 0s (recrear probabilisticament):\")\n",
+    "print(A_test_0.shape)\n",
+    "np.save(\"synthetic_paper_0.npy\", A_test_0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "3b0c980c",
    "metadata": {},
    "outputs": [
@@ -738,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "a3e81b1f",
    "metadata": {},
    "outputs": [],
@@ -761,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "017ad3a2",
    "metadata": {},
    "outputs": [],
